# nodegui-plugin-opengl

./: CMakeLists.txt  LICENSE  README.md  package.json  tsconfig.json
src/: index.ts
src/cpp/: main.cpp
src/cpp/QOpenGLBuffer/: qopenglbuffer_wrap.cpp  qopenglbuffer_wrap.h
src/cpp/QOpenGLContext/: qopenglcontext_wrap.cpp  qopenglcontext_wrap.h
src/cpp/QOpenGLDebugLogger/: qopengldebuglogger_wrap.cpp  qopengldebuglogger_wrap.h
src/cpp/QOpenGLExtraFunctions/: qopenglextrafunctions_wrap.cpp  qopenglextrafunctions_wrap.h
src/cpp/QOpenGLShader/: qopenglshader_wrap.cpp  qopenglshader_wrap.h
src/cpp/QOpenGLShaderProgram/: qopenglshaderprogram_wrap.cpp  qopenglshaderprogram_wrap.h
src/cpp/QOpenGLTexture/: qopengltexture_wrap.cpp  qopengltexture_wrap.h
src/cpp/QOpenGLVertexArrayObject/: qopenglvertexarrayobject_wrap.cpp  qopenglvertexarrayobject_wrap.h
src/cpp/QOpenGLWidget/: nopenglwidget.hpp  qopenglwidget_wrap.cpp  qopenglwidget_wrap.h
src/cpp/QSurfaceFormat/: qsurfaceformat_wrap.cpp  qsurfaceformat_wrap.h
src/examples/: cube.ts  hellogl2.ts  triangle.ts
src/lib/: OpenGLContextProfile.ts  QOpenGLBuffer.ts  QOpenGLContext.ts  QOpenGLDebugLogger.ts  QOpenGLExtraFunctions.ts  QOpenGLShader.ts  QOpenGLShaderProgram.ts  QOpenGLTexture.ts  QOpenGLVertexArrayObject.ts  QOpenGLWidget.ts  QSurfaceFormat.ts
src/lib/utils/: addon.ts  helpers.ts
